# quickjs-py

./: .gitmodules  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
docs/: api.md
examples/: 01_basic_eval.py  02_python_and_js.py  03_callbacks.py  04_errors.py  05_modules.py  06_bytecode.py  07_limits.py  08_promises.py  09_benchmark_bytecode_vs_eval.py  10_js_classes.py  11_benchmark_optimizations.py  README.md
src/quickjs/: __init__.py  _async.py  _quickjs.c  _quickjs.pyi
tests/: conftest.py  test_advanced.py  test_async.py  test_callbacks.py  test_context.py  test_conversions.py  test_eval.py  test_memory.py  test_optimizations.py  test_runtime.py
