[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quickjs-py"
version = "0.1.0"
description = "Python bindings for the QuickJS JavaScript engine (quickjs-ng)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "quickjs-py contributors" }]
keywords = ["quickjs", "javascript", "js", "engine", "bindings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/slightc/quickjs-py"
Repository = "https://github.com/slightc/quickjs-py"

[project.optional-dependencies]
test = ["pytest>=7"]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quickjs = ["py.typed", "*.pyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.coverage.run]
source = ["quickjs"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.cibuildwheel]
# 64-bit only: QuickJS is built with the 64-bit mingw-w64 toolchain on
# Windows, which cannot target 32-bit (win32 / i686).
build = "cp39-* cp311-* cp313-*"
archs = ["auto64"]
skip = "*-musllinux_*"
test-requires = "pytest"
test-command = "pytest {project}/tests -q"
